--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="Batle Boys.xbx">Battle Boys>
+  <a href="Batle Boys.xbx">Battle Boys</a>
 </body>
 </html>
